# cybercomp

./: .gitignore  README.md  cybercomp.code-workspace  environment.yml  main.py  pyproject.toml  test.py  testbed.ipynb
cybercomp/: __init__.py  base.py  codegen.py  cybercomp.py  experiment.py  generics.py  loader.py  specs.py  tester.py  typed.py  types.py
cybercomp-api/: api.py  codegen.py
cybercomp-api/database/engines/: bazhenov_labs_engine.yml
cybercomp-api/database/models/: apples_to_oranges.yml
cybercomp-api/database/types/: neuro.yml  sample.yml
cybercomp-python-sdk/: .gitignore  README.md  pyproject.toml
cybercomp-python-sdk/src/cybercomp/: __init__.py  analysis.py  base.py  codegen.py  completions.py  exceptions.py  experiment.py  functional.py  generics.py  runtimes.py  service.py  specs.py  util.py  util_composition.py  util_recipes.py
cybercomp-server/: .gitignore  api.py  dataloader.py  overrides.yml  requirements.txt  sub.py  unsub.py
cybercomp-server/database/engines/: bash.yml  bazhenov_labs_engine.yml  mustache.yml  mustache_engine.yml  neuro_sleep_stage.yml  (+3 more)
cybercomp-server/templates/: annotate.html  browse.html  footer.html  header.html  index.html
demos/: .gitignore  poc_neuroscience.ipynb  test.py
examples/: .gitignore  poc_bottom_up.ipynb  poc_neuroscience.ipynb  poc_top_down.ipynb  testbed.ipynb
server/: .gitignore  overrides.yml
server/templates/: browse.html  footer.html  index.html
src/cybercomp/: base.py  experiment.py  runtimes.py  service.py  specs.py  util_composition.py
tests/: .gitignore  testbed.ipynb
(+90 files in other folders)
