[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybercomp"
version = "0.1.0"
description = "Python SDK to define and run computational simulations with Cybershuttle"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["astor", "pydantic", "black"]

[project.urls]
homepage = "https://github.com/yasithdev/cybercomp"
